# PyMongeAmpere

./: .gitignore  .gitmodules  CMakeLists.txt  MongeAmpere.cpp  README.md  test.py
MongeAmpere/: CMakeLists.txt  __init__.py
examples/: CMakeLists.txt  bluenoise.py  delaunay.py  display_laguerre.py  euler.py  lloyd.py  optimal_transport.py  sample_disk.py  simple_optimal_transport.py  zeldovich.py
